add available employee table

--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -176,17 +176,17 @@
             import { getUser } from "/js/currentLoginUser.js";
 
             const languageList = {
-                "c#": "/images/languages/c#.png",
-                "c++": "/images/languages/c++.png",
-                "html": "/images/languages/html.png",
-                "java": "/images/languages/java.png",
-                "js": "/images/languages/js.png",
-                "php": "/images/languages/php.png",
-                "python": "/images/languages/python.png",
-                "ruby": "/images/languages/ruby.png",
-                "SQL": "/images/languages/SQL.png",
-                "css" : "/images/languages/css.png",
-                "typescript": "/images/languages/typescript.png"
+                "c#": "/images/languages/c#-min.png",
+                "c++": "/images/languages/c++-min.png",
+                "html": "/images/languages/html-min.png",
+                "java": "/images/languages/java-min.png",
+                "js": "/images/languages/js-min.png",
+                "php": "/images/languages/php-min.png",
+                "python": "/images/languages/python-min.png",
+                "ruby": "/images/languages/ruby-min.png",
+                "SQL": "/images/languages/SQL-min.png",
+                "css" : "/images/languages/css-min.png",
+                "typescript": "/images/languages/typescript-min.png"
             }
 
             console.log(await getUser());
@@ -968,7 +968,7 @@
                 });
             });
 
-            let employeeList = loginUser.employees;
+            let employeeList = await getData("/api/currentuser/available/employees");
 
             console.log(employeeList);
 
@@ -1202,12 +1202,12 @@
                             $("#validation-form")[0].reset();
                             console.log("this projce has benn saved", data);
                             // event.currentTarget.submit();
-                            await getAllProjects();
-
+                            window.top.location = window.top.location;
                         },
                         error: function (data) {
                             alert("Error registering project");
                             // event.currentTarget.submit();
+                            window.top.location = window.top.location;
                         },
                     });
                 });
