noti in all pages

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -251,6 +251,7 @@ ominus-bootstrap-4.min.js"></script>
 
 <!-- sort (department, project), form validation and search bar behavior are all here -->
 <script src="/js/custome.js"></script>
+<script src="https://js.pusher.com/8.2.0/pusher.min.js"></script>
 <script>
     $(document).ready(function () {
         setupLogoutConfirmation();
@@ -547,6 +548,7 @@ ominus-bootstrap-4.min.js"></script>
 
 
 </script>
+<script src="/js/notification.js" type="module"></script>
 </body>
 
 </html>
