--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -539,6 +539,8 @@
 <script src="/js/main.js">
 <script src="/js/forprogresscircleiguess.js"></script>
 
+<script src="https://js.pusher.com/8.2.0/pusher.min.js"></script>
+
 <!-- sort (department, project), form validation and search bar behavior are all here -->
 <script src="/js/custome.js"></script>
 <script type="module">
@@ -659,5 +661,6 @@
 
 
 </script>
+<script src="/js/notification.js" type="module"></script>
 </body>
 </html>
