--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -173,6 +173,7 @@
 
 <!-- Include Bootstrap Table, and Bootstrap Table Export JavaScript -->
 <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.js"></script>
+<script src="https://js.pusher.com/8.2.0/pusher.min.js"></script>
 <script>
     $(document).ready(function () {
         setupLogoutConfirmation();
@@ -393,5 +394,6 @@
 
 
 </script>
+<script src="/js/notification.js" type="module"></script>
 </body>
 </html>
