fixed some error

--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -541,7 +541,7 @@
                     updated_date: new Date().getTime(),
                     root_cause: root_cause,
                     direct_cause: direct_cause,
-                    responsible_party: selectedResponsibleParty.id,
+                    responsible_party: selectedResponsibleParty,
                     issue_category: issue_category,
                     responsible_type: responsible_type,
                     project_id: dataForIssue.projectId,
