--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -304,6 +304,12 @@
                 // Adding image, link, video, or formula
                 ["link"],
             ];
+            //Save Review
+            document
+                .querySelector("#review-form")
+                .addEventListener("submit", function (e){
+
+                })
 
             // SAVE CLIENT
             document
