--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1155,6 +1155,14 @@
                         console.log(matchingObj);
                         return matchingObj ? matchingObj : { type: deli.value };
                     });
+
+                    const deliverableList = deliverTypeList.map(deli => {
+                        return {
+                            status : false,
+                            deliverableType : deli
+                        }
+                    })
+
                     // You may want to add some form validation here before sending the data
                     console.log(objective);
                     console.log(architectures);
@@ -1176,7 +1184,7 @@
                             return acc;
                         }, {}),
                         current_phase: "PLANNING",
-                        deliverableDto: deliverTypeList,
+                        deliverableDto: deliverableList,
                         objective: objective,
                         amountDto: {
                             basic_design: 0,
@@ -1195,26 +1203,26 @@
                     };
                     console.log(project);
                     //Perform the AJAX request
-                    // $.ajax({
-                    //     url: "/api/project/save", // Replace with the actual URL for your project registration endpoint
-                    //     type: "POST",
-                    //     data: JSON.stringify(project),
-                    //     dataType: "json",
-                    //     contentType: "application/json; charset=utf-8",
-                    //     success: async function (data) {
-                    //         alert("Project registered successfully");
-                    //         // Reset the form if needed
-                    //         $("#validation-form")[0].reset();
-                    //         console.log("this projce has benn saved", data);
-                    //         // event.currentTarget.submit();
-                    //         await getAllProjects();
-                    //
-                    //     },
-                    //     error: function (data) {
-                    //         alert("Error registering project");
-                    //         // event.currentTarget.submit();
-                    //     },
-                    // });
+                    $.ajax({
+                        url: "/api/project/save", // Replace with the actual URL for your project registration endpoint
+                        type: "POST",
+                        data: JSON.stringify(project),
+                        dataType: "json",
+                        contentType: "application/json; charset=utf-8",
+                        success: async function (data) {
+                            alert("Project registered successfully");
+                            // Reset the form if needed
+                            $("#validation-form")[0].reset();
+                            console.log("this projce has benn saved", data);
+                            // event.currentTarget.submit();
+                            await getAllProjects();
+
+                        },
+                        error: function (data) {
+                            alert("Error registering project");
+                            // event.currentTarget.submit();
+                        },
+                    });
                 });
             });
 
