--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -48,10 +48,10 @@
 
             <div class="container-fluid d-md-block pt-2 ps-s pe-2"
                  id="dropdrown-search-bar">
-                <div class="d-flex flex-row justify-content-between position-relative">
+                <div class="d-flex flex-row justify-content-lg-between position-relative">
 
-                    <div class="d-inline-block d-flex mb-3">
-                        <select id="status-filter" class="form-control">
+                    <div class="d-inline-block d-flex mb-3" style="margin-left:520px;">
+                        <select id="status-filter" class="form-control me-2" >
                             <option value="" selected disabled>Status</option>
                             <option value="PENDING">PENDING</option>
                             <option value="APPROVE">APPROVE</option>
@@ -59,11 +59,26 @@
                             <option value="DUPLICATE">DUPLICATE</option>
                         </select>
 
-                        <select id="solved-filter" class="form-control">
+                        <select id="solved-filter" class="form-control me-2">
                             <option value="" selected disabled>Choose</option>
                             <option value="1">Solved</option>
                             <option value="0">Unsolved</option>
                         </select>
+
+
+                        <select id="category-filter" class="form-control me-2">
+                            <option value="" selected disabled>Category</option>
+                            <option value="ERROR">ERROR</option>
+                            <option value="BUG">BUG</option>
+                            <option value="COMMUNICATION">COMMUNICATION</option>
+                            <option value="TECHNICAL">TECHNICAL</option>
+                            <option value="BUDGET">BUDGET</option>
+                            <option value="DESIGN">DESIGN</option>
+                            <option value="TESTING">TESTING</option>
+                            <option value="OTHER">OTHER</option>
+
+                        </select>
+
                     </div>
 
 
@@ -73,7 +88,7 @@
                             <input class="form-control border-0" type="search" placeholder="Search" />
                         </form>
                         <!-- modal toggle button start -->
-                        <button type="button" class="btn btn-light align-self-start d-none" data-bs-toggle="modal" data-bs-target="#add-issue">
+                        <button type="button" class="btn btn-light align-self-start" data-bs-toggle="modal" data-bs-target="#add-issue">
                             <i class="bi bi-plus-lg"></i>
                         </button>
                         <!-- modal toggle button end -->
@@ -153,7 +168,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <label for="issue_category" class="col-sm-12 col-form-label" name="issue_category">Issue Category<span
+                        <label for="issue_category" class="col-sm-12 col-form-label" name="issueCategory">Issue Category<span
                                 style="color:red"> *</span></label>
                         <select class="form-select border-task-description" name="issue_category" id="issue_category" >
                             <option selected>Select Issue Category</option>
@@ -278,7 +293,7 @@
                             </div>
 
                             <div class="col mb-3 ">
-                                <span class="d-flex custom-issue-margin"><h6>Impact:</h6><p class="icon-title col-lg-5 text-center" id="impactDetails"></p></span>
+                                <span class="d-flex custom-issue-margin"><h6>Impact:</h6><p class="icon-title col-lg-6 text-center" id="impactDetails"></p></span>
 
                             </div>
 
@@ -288,6 +303,11 @@
                             </div>
                             <div class="col mb-3 ">
                                 <span class="d-flex custom-issue-margin"><h6>Preventive Action:</h6><p class="icon-title col-4 text-center" id="preventiveDetails"></p></span>
+
+                            </div>
+
+                            <div class="col mb-3 ">
+                                <span class="d-flex custom-issue-margin"><h6>Solved Date:</h6><p class="icon-title col-6 text-center" id="solveDateDetails"></p></span>
 
                             </div>
                         </div>
@@ -545,7 +565,7 @@
             const root_cause = $('#root_cause').val();
             const direct_cause = $('#direct_cause').val();
             const responsible_party = $('#responsible_party').val();
-            const issue_category = $('#issue_category').val();
+            const issue_category = $('#issueCategory').val();
             const responsible_type = actual_responsible_type;
             const selectedUserId = $('#user_pic').val();
             const issueId = $('#issue-edit-btn').data('issueId');
@@ -584,7 +604,7 @@
                 root_cause: root_cause,
                 direct_cause: direct_cause,
                 responsible_party: selectedResponsibleParty.id,
-                issue_category: issue_category,
+                issueCategory: issue_category,
                 responsible_type: responsible_type,
                 project_id: dataForIssue.projectId,
                 user_uploader:uploaderId,
@@ -693,6 +713,16 @@
                         $('#details').collapse('show');
                         $('#peoples').collapse('show');
 
+                        function formatDate(timestamp) {
+                            // Assuming data.solved_date is a timestamp in milliseconds
+                            const date = new Date(timestamp);
+
+                            // Format the date as a string (adjust the format as needed)
+                            const formattedDate = `${date.toLocaleDateString()} ${date.toLocaleTimeString()}`;
+
+                            return formattedDate;
+                        }
+
                         // Get the issue ID directly from the button's data-id attribute
                         const issueId = $(this).data('id'); // Use $(this) instead of $('#issue-edit-btn')
                         console.log('Clicked button with data-iD:', issueId);
@@ -705,7 +735,7 @@
                                 console.log('Data received:', data);
                                 if (data) {
                                     $('#issueTitleDetails').text(data.title);
-                                    $('#issue_categoryDetails').text(data.issue_category);
+                                    $('#issue_categoryDetails').text(data.issueCategory);
                                     $('#uploaderDetails').text(data.user_uploader.name);
                                     $('#picDetails').text(data.user_pic.name);
                                     $('#rpDetails').text(data.responsible_party.name);
@@ -716,6 +746,7 @@
                                     $('#impactDetails').text(data.impact);
                                     $('#correctiveDetails').text(data.corrective_action);
                                     $('#preventiveDetails').text(data.preventive_action);
+                                    $('#solveDateDetails').text(formatDate(data.solved_date));
                                     $('#issue-edit-btn').data('issueId', issueId); // Set the issueId
                                     $('#issueDetailsModal').modal('show');
                                 } else {
@@ -773,6 +804,7 @@
                 corrective_action: corrective_action,
                 preventive_action: preventive_action,
                 updated_date: new Date().getTime(),
+                solved_date: new Date().getTime(),
                 solved: solved,
             };
 
@@ -827,6 +859,10 @@
         $("#solved-filter").on("change", function() {
             filterSolvedIssues();
         });
+
+        $("#category-filter").on("change",function (){
+            filterCategory();
+        })
 
 
         function filterIssues() {
@@ -918,6 +954,55 @@
             });
         }
 
+
+        // for Category filter
+        function filterCategory() {
+            var category = $('#category-filter').val();
+            console.log("category", category);
+
+            $.ajax({
+                url: '/api/issue/list/category/'+category,
+                type: 'GET',
+                success: function(data) {
+                    console.log('Success. Received data:', data);
+
+                    const sortContainer = $('#sort');
+                    sortContainer.empty(); // Clear previous content
+
+                    // Check if data is not empty
+                    if (data && data.length > 0) {
+                        // Loop through the retrieved data and create content for each item
+                        data.forEach(item => {
+                            const issueDiv = createIssueCard(item);
+                            sortContainer.append(issueDiv);
+                        });
+                    } else {
+                        // Handle case when data is empty
+                        sortContainer.html('<p style="text-align: center;">No results found.</p>');
+                    }
+                },
+
+                error: function(xhr, status, error) {
+                    console.error('Error fetching data:', error);
+                    console.log('XHR:', xhr);
+                    console.log('Status:', status);
+
+                    // Display the error response in the console
+                    try {
+                        const response = JSON.parse(xhr.responseText);
+                        console.log('Error response:', response);
+                    } catch (e) {
+                        console.log('Error parsing response:', e);
+                    }
+
+                    alert('Error fetching data.');
+                }
+            });
+        }
+
+
+
+        // for issue list
         function createIssueCard(item) {
             return `
                     <div class="p-sm-2 ">
@@ -949,7 +1034,7 @@
                                                 </div>
 
                                         </div>
-                                         <p class="badge bg-secondary " style="margin-left:15px;">${item.issue_category}</p>
+                                         <p class="badge bg-secondary " style="margin-left:15px;">${item.issueCategory}</p>
 
                                         <div class="d-flex justify-content-end align-items-center" style="margin-right: 20px;">
                                         <div class="d-flex align-items-center gap-1">
