--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -29,18 +29,6 @@
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/gh/habibmhamadi/multi-select-tag/dist/css/multi-select-tag.css">
 
-    <!-- toast ui calendar -->
-    <link rel="stylesheet" href="https://uicdn.toast.com/calendar/latest/toastui-calendar.min.css" />
-    <link
-            rel="stylesheet"
-            href="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.css"
-    />
-    <link
-            rel="stylesheet"
-            href="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.css"
-    />
-
-
     <!--  select-->
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
@@ -51,8 +39,8 @@
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0/css/bootstrap-select.min.css"> -->
 
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.2.0/tagify.css">
+
     <!-- Template Stylesheet -->
     <link href="/css/style.css" rel="stylesheet"/>
     <link href="/css/bootstrap-select2.min.css" rel="stylesheet"/>
@@ -65,6 +53,10 @@
 
     <!-- full calendar -->
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.9/index.global.min.js'></script>
+
+    <!-- jqueryUI -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/redmond/jquery-ui.min.css" integrity="sha512-pL3uvb0iajriFzWcsjvmztg0ViN8MGpl4ajmiCb+xC5vnLUES2mkdp+7YAUjlcK/T+htiZH9HNkxAO+P3TbUmA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/redmond/theme.min.css" integrity="sha512-0bcqtDVki4GAD6rxlpngwNROUwKg5Nf+ARCueSCa1gk1DB5V9QxsChj2G+dGNOQzN8tpbJidotfAhPZnQjsJ/w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <script src="/js/logout-modal.js"></script>
 
