--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -413,20 +413,13 @@
                         </div>
 
                         <div class="col-md-6">
-                            <label
-                                    for="start_time"
-                                    class="col-sm-12 col-form-label"
-                            >Start Date
-                                <span style="color: red">
-                                            *</span
-                                ></label
-                            >
-                            <input
-                                    type="date"
-                                    class="form-control border-task-description"
-                                    id="start_time"
-                                    name="start_time"
-                            />
+                            <div id="date-picker">
+                                <div class="input">
+                                    <div class="result">Start Date: <span></span></div>
+                                    <button><i class="fa fa-calendar"></i></button>
+                                </div>
+                                <div class="calendar"></div>
+                            </div>
                         </div>
 
                         <div class="col-md-6">
@@ -521,12 +514,18 @@
     <!-- sort (department, project), form validation and search bar behavior are all here -->
     <script src="/js/custome.js"></script>
 
+    <!-- jqeury date picker -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js" integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <!--    for assign member-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.2.0/tagify.min.js"></script>
     <script src="https://js.pusher.com/8.2.0/pusher.min.js"></script>
     <script type="module">
         import {getData, sendData} from "/js/api-function.js";
         import {getTimeElapsed} from "/js/time.js";
+
+        //initialize jqeury ui datepicker after clicked #date-picker
+        $('#date-picker')
 
         // Get the project ID from the hidden element
         const projectId = document.getElementById("projectId").innerText;
